--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.24.0",
 		"sass": "^1.62.1",
+		"svelte-awesome": "^3.2.0",
 		"svelte-cached-store": "^0.0.8",
 		"svelte-dnd-action": "^0.9.22",
 		"svelte-french-toast": "^1.0.4-beta.0"
