--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.24.0",
+		"dotenv": "^16.1.3",
 		"sass": "^1.62.1",
 		"svelte-awesome": "^3.2.0",
 		"svelte-cached-store": "^0.0.8",
