--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.4.0",
+		"@fortawesome/free-brands-svg-icons": "^6.4.0",
+		"@fortawesome/free-regular-svg-icons": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@supabase/supabase-js": "^2.24.0",
 		"dotenv": "^16.1.3",
 		"sass": "^1.62.1",
-		"svelte-awesome": "^3.2.0",
 		"svelte-cached-store": "^0.0.8",
 		"svelte-dnd-action": "^0.9.22",
+		"svelte-fa": "^3.0.4",
 		"svelte-french-toast": "^1.0.4-beta.0"
 	}
 }
